# book_Programmation_des_jeux_MichaelMorrison

chapter_2/skeleton/: CMakeLists.txt  README.md  gameengine.hpp  resource.h  skeleton.cpp  skeleton.h  skeleton.rc
chapter_3/skeleton/: CMakeLists.txt  README.md  build.bat  convert_png_to_ico.bat  edit_code.bat  gameapp.hpp  gameengine.cpp  gameengine.hpp  skeleton.cpp  skeleton.hpp  skeleton.rc  winmain.cpp
